# Queryer

./: Cargo.toml  README.md
examples/: covid.rs  dialect.rs
queryer/: Cargo.toml
queryer-py/: Cargo.toml
queryer-py/src/: lib.rs
queryer/examples/: dialect.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs
src/: convert.rs  lib.rs  load.rs
