[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
sqlparser = "0.10"
polars = {version = "0.15", features = ["json", "lazy"] }
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
tokio = {version = "1", features = ["fs"]}
tracing = "0.1" #日志处理

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = {version = "1", features = ["full"]} #example下我们需要更多的 tokio feature

[[example]]
name = "dialect"